# job-globe.com

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  LICENSE  README.md  commit-phase5.bat  package-lock.json  package.json  push-ci-fix.bat  railway.json  vercel.json
.github/: CODEOWNERS
apps/workers/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/workers/agents/discovery/: scheduler.py
apps/workers/agents/discovery/connectors/: workable.py
apps/workers/embeddings/: job_embedder.py  profile_embedder.py  similarity.py
apps/workers/event_bus/: consumer.py  producer.py
apps/workers/observability/: metrics.py  tracing.py
apps/workers/parsers/: normaliser.py  resume_extractor.py
apps/workers/scoring/: calibration.py  explainer.py  match_engine.py
apps/workers/src/job_globe_workers/: __main__.py  main.py  runtime.py  settings.py  utils.py
apps/workers/src/job_globe_workers/db/: __init__.py  connection.py
apps/workers/src/job_globe_workers/event_bus/: consumer.py  producer.py
apps/workers/src/job_globe_workers/observability/: health.py  metrics.py  tracing.py
apps/workers/tests/: conftest.py  test_match_engine.py
apps/workers/tests/agents/: test_categorisation.py  test_company_identity.py  test_connectors.py  test_duplicate_detection.py  test_geo_mapping.py  test_resume_parser_worker.py  test_scheduler.py  test_url_checker.py
apps/workers/tests/parsers/: test_resume_extractor.py
apps/workers/tests/scoring/: test_match_engine_v2.py
docs/: STATUS.md  (+1 more)
(+197 files in other folders)
