[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-globe-workers"
version = "0.1.0"
description = "Jarvis Job Globe worker plane"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.0.0",
  "psycopg[binary]>=3.1.0",
  "psycopg-pool>=3.1.0",
  "pycountry>=24.6.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pymupdf>=1.24.0",
  "redis>=5.0.0",
  "structlog>=24.1.0",
  "unstructured>=0.14.0"
]

[project.optional-dependencies]
dev = ["black>=24.4.0", "mypy>=1.10.0", "pip-audit>=2.7.0", "pytest>=8.2.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
